# highland

./: .gitignore  .todo  CMakeLists.txt  CONTRIBUTING.md  INSTALL.sh  README  RUN_MANIFEST.md  VERSIONING.md  WORKFLOW_eventDisplay.md  cleanup.sh
.github/: pull_request_template.md
cmake/modules/: HighlandConfiguration.cmake
cmake/scripts/: HIGHLANDConfig.cmake.in
highland2/LArSoftReader/fragments/: special_rootcint  special_rootcint_header
highland2/LArSoftReader/src/2ndproduction/: LArSoftTreeConverter.cxx
highland2/baseAnalysis/doc/: baseAnalysisHistory.dox
highland2/duneExampleAnalysis/src/: EventBoxDUNE.cxx  EventBoxDUNE.hxx  duneExampleAnalysis.hxx  duneExampleSelection.hxx  duneSelectionUtils.cxx  duneSelectionUtils.hxx
highland2/highlandCore/CVS/: Repository
highland2/highlandCore/doc/: highlandCoreHistory.dox  mainpage.dox
highland2/highlandCore/doc/CVS/: Entries
highland2/highlandCore/src/: AnalysisAlgorithm.cxx  AnalysisLoop.cxx  CategoryClasses.cxx  CategoryClasses.hxx  ConfigurationBase.hxx  ConfigurationManager.hxx  CorrectionBase.hxx  CorrectionManager.cxx  DocString.cxx  DocString.hxx  DocStringManager.cxx  DocString_LinkDef.h  OutputManager.cxx  OutputManager.hxx
highland2/highlandDoc/doc/: Advanced.dox  Systematics.dox
highland2/highlandEventModel/doc/: highlandEventModelHistory.dox
highland2/highlandEventModel/src/: DataClasses.cxx  DataClasses.hxx
highland2/highlandIO/doc/: mainpage.dox
highland2/highlandIO/src/: anaTreeConverter.cxx  anaTreeNewConverter.cxx  anaTreeNewConverter.hxx  nueAnaTreeConverter.hxx  pionTreeConverter.cxx
highland2/highlandTools/doc/CVS/: Entries
highland2/highlandTools/src/: DrawingToolsBase.cxx  DrawingToolsBase.hxx  HistoStack.cxx  SystematicTools.cxx  WeightTools.cxx
highland2/highlandTools/src/CVS/: Entries
highland2/highlandUtils/src/: CategoriesUtils.cxx  CategoriesUtils.hxx  ProductionUtils.cxx  ProductionUtils.hxx  TransverseUtils.cxx  TransverseUtils.hxx
highland2/pionAnalysis/src/: BeamMomCorrection.cxx  BeamMomSmearingCorrection.cxx  BrokenTrackDataCorrection.cxx  EventBoxPD.cxx  ToyBoxPD.hxx  dEdxDataCorrection.cxx  dEdxVariation.cxx  pionAnalysis.cxx  pionAnalysis.hxx  pionSelectionUtils.cxx
highland2/protoDuneExampleAnalysis/src/: BeamMomCorrection.cxx  BeamMomSmearingCorrection.cxx  dEdxVariation.cxx  pionSelection.hxx  protoDuneExampleAnalysis.cxx  protoDuneSelectionUtils.hxx  stoppingKaonSelection.cxx  stoppingKaonSelection.hxx  stoppingMuonSelection.cxx
psyche/psycheCore/CVS/: Repository
psyche/psycheCore/doc/: psycheCoreHistory.dox
psyche/psycheCore/doc/CVS/: Entries
psyche/psycheCore/src/: EventVariationManager.cxx  Experiment.cxx  HEPConstants.hxx  Header.hxx  Header_LinkDef.h  InputConverter.hxx  InputManager.cxx  ManagerBase.cxx  ManagerBase.hxx  ParticleId.cxx  SelectionBase.cxx  SelectionManager.cxx  SelectionManager.cxx_old  SelectionManager.hxx  StepBase.hxx  SystematicBase.hxx  SystematicManager.cxx  SystematicManager.hxx  ToyExperiment.hxx  ToyVariations.hxx  WeightType.hxx
psyche/psycheDUNEUtils/doc/: psycheND280UtilsHistory.dox
psyche/psycheDUNEUtils/src/: TPCPIDVariation.hxx
psyche/psycheEventModel/doc/: psycheEventModelHistory.dox
psyche/psycheEventModel/src/: EventBoxId.hxx  SampleId.cxx  SampleId.hxx  SubDetId.hxx
psyche/psycheIO/doc/: psycheIOHistory.dox
psyche/psycheIO/src/: MiniTreeConverter.cxx
psyche/psycheSelections/doc/: mainpage.dox
psyche/psycheSelections/src/: baseSelection.cxx
psyche/psycheUtils/doc/: psycheUtilsHistory.dox
psyche/psycheUtils/doc/CVS/: Repository
psyche/psycheUtils/parameters/CVS/: Entries
psyche/psycheUtils/src/: BeamBunching.cxx  BinnedParams.hxx
psyche/psycheUtils/src/CVS/: Repository
scripts/: INSTALL.sh  README_setup.md  chrootmap  chsetup  cleanup.sh  gitpull  gitstatus  setup.sh  setup_cmake.sh_template
src/highland2/baseAnalysis/doc/: mainpage.dox
src/highland2/baseAnalysis/src/: baseAnalysis.cxx  baseAnalysis.hxx  baseToyMaker.cxx  baseToyMaker.hxx
src/highland2/duneExampleAnalysis/app/: RunDuneExampleAnalysis.cxx
src/highland2/duneExampleAnalysis/macros/: plots.C
src/highland2/duneExampleAnalysis/src/: DetectorMassWeight.cxx  DetectorMassWeight.hxx  ToyBoxDUNE.cxx  ToyBoxDUNE.hxx  dEdxVariation.cxx  duneExampleAnalysis.cxx  duneExampleSelection.cxx
src/highland2/highlandCore/src/: AnalysisAlgorithm.cxx  AnalysisAlgorithm.hxx  AnalysisLoop.cxx  AnalysisLoop.hxx  CategoryClasses.cxx  CategoryClasses.hxx  CategoryManager.cxx  CategoryManager.hxx  ConfigurationBase_LinkDef.h  ConfigurationManager.cxx  ConfigurationManager.hxx  CorrectionBase.cxx  CorrectionBase_LinkDef.h  CorrectionManager.cxx  CorrectionManager.hxx  DocStringManager.hxx  OutputManager.cxx  OutputManager.hxx  SimpleLoopBase.cxx  SimpleLoopBase.hxx  VersionManager.cxx  VersionManager.hxx
src/highland2/highlandCorrections/src/: MomRangeCorrection.cxx  MomRangeCorrection.hxx
src/highland2/highlandDoc/doc/: DrawingTools.dox  Microtree.dox  Overview.dox  mainpageGeneral.dox
src/highland2/highlandEventModel/src/: DataClasses.cxx  DataClasses.hxx  DataClasses_LinkDef.h  Versioning.hxx
src/highland2/highlandIO/doc/: highlandIOHistory.dox
src/highland2/highlandIO/src/: #pionana_tree.txt#  CreateMiniTree.cxx  CreateMiniTree.hxx  HighlandMiniTreeConverter.hxx  anaTreeConverter.hxx  anaTreeNewConverter.cxx  nueAnaTreeConverter.cxx  pionTreeConverter.cxx  pionTreeConverter.hxx  pionana_tree.txt
src/highland2/highlandTools/CVS/: Repository
src/highland2/highlandTools/doc/: highlandToolsHistory.dox
src/highland2/highlandTools/src/: DrawingTools.cxx  DrawingTools.hxx  DrawingToolsBase.cxx  DrawingToolsBase.hxx  DrawingUtils.cxx  DrawingUtils.hxx  EventDisplayBase.cxx  EventDisplayBase.hxx  EventDisplayBase_LinkDef.h  HistoStack.cxx  HistoStack.hxx  SetProtoDUNEStyle.H  SystematicTools.hxx  WeightTools.cxx
src/highland2/pionAnalysis/: CMakeLists.txt
src/highland2/pionAnalysis/src/: CryoWallBeamMomCorrection.cxx  EventBoxPD.hxx  pionSelection.cxx  pionSelection.hxx  pionSelectionUtils.hxx
(+92 files in other folders)
